welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:0: error: method posFinale has return statement; needs result type
class ColumnByColumn extends SimpleBuggle {def posFinale() = { return getX()==getMondeLargeur() && getY() == getMondeHauteur()}
                                                               ^ColumnByColumn:4: error: not found: value get
while (!posFinale) {ecritMessage(""+compt);compt+=1; if(get==getMondeLargeur) {setY(getY+1)} else {setPos(getX()+1,0)}}  
                                                        ^