welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
def posFinale() = { return getX()==getMondeLargeur() && getY() == getMondeHauteur()}

override def run() {
var compt = 0;
while (!posFinale) {ecritMessage(""+compt);compt+=1; if(get==getMondeLargeur) {setY(getY+1)} else {setPos(getX()+1,0)}}  






  
}